rust/tests/compile_fail/unhandled_external.out
error[E0004]: non-exhaustive patterns: `&B3` not covered
  --> src/main.rs:8:1
   |
8  | / bidi!(SUT<A, B> {
9  | |     A1 = B1,
10 | |     A2 = B2,
11 | | });
   | |   ^
   | |   |
   | |___pattern `&B3` not covered
   |     in this macro invocation
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
error: Could not compile `unhandled_external`.

To learn more, run the command again with --verbose.
